# Grimoire3D

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: __init__.py  aa_demo.py  bloom_demo.py  console_demo.py  editor_mockup.py  gui_tiled_demo.py  input_demo.py  minimal_window.py  pause_demo.py  primitives_showcase.py  renderer3d_phase1_demo.py  renderer3d_phase2_demo.py  renderer3d_phase3_demo.py  renderer3d_phase4_demo.py  resolution_scaling_demo.py  scene_demo.py
demos/assets/: uv_cube.mtl
docs/: design-goals.md
docs/proposals/: 0001-data-model-architecture.md
scripts/: generate_test_assets.py
src/grimoire2d/: exceptions.py
src/grimoire2d/assets/: __init__.py  tiled.py  vfs.py
src/grimoire2d/gui/: __init__.py  console.py  gui.py  widgets.py
src/grimoire2d/logic/: __init__.py  camera.py  camera3d.py  gamepad_ops.py  input_mapper.py  input_router.py  network_protocol.py  pause_logic.py  (+3 more)
src/grimoire3d/: __init__.py  exceptions.py
tests/: test_aa.py  test_actor.py  test_archive.py  test_bloom.py  test_collision.py  test_gamepad_ops.py  test_gamepad_state.py  test_gui.py  test_import.py  test_input_binding.py  test_input_frame.py  test_input_map.py  test_input_mapper.py  test_input_router.py  test_mapped_input_source.py  test_models.py  test_mouse_state.py  test_multiplayer_config.py  test_network_protocol.py  test_obj_loader.py  test_pause.py  test_pixel_buffer.py  test_player.py  test_raw_input_frame.py  test_scene.py  test_scene_graph.py  test_scene_ops.py  test_sdf.py  test_simulation.py  test_vfs.py  test_viewport_layout.py
(+84 files in other folders)
