[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire2d"
version = "0.1.0"
description = "Grimoire2D - a 2D game framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.0",
    "moderngl>=5.10.0",
]

[project.optional-dependencies]
tools = [
    "dearpygui>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]