[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire3d"
version = "0.1.0"
description = "Grimoire3D - a 3D game framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.0",
    "moderngl>=5.10.0",
    "PyGLM>=2.7.0",
]

[project.optional-dependencies]
# Dear PyGui is deliberately *not* used. We maintain an in-house GUI widget
# library built directly on the engine's Renderer. This is required for
# correct integration with split-screen / multi-viewport rendering.


[tool.setuptools.packages.find]
where = ["src"]